--- a/forma2/index.html
+++ b/forma2/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>forma2</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+    <section class="container">
+        <form class="form" action="" method="">
+            <h1 class="form__h1">Регистрация</h1>
+            <h2 class="form__h2">Уже есть аккаунт? <a href="">Войти</a></h2>
+            <div class="form__name">
+                <h3 class="form__h3">Моя компания!</h3>
+            </div>
+        </form>
+    </section>
+
 </body>
+
 </html>
