--- a/forma2/index.html
+++ b/forma2/index.html
@@ -16,6 +16,22 @@
             <div class="form__name">
                 <h3 class="form__h3">Моя компания!</h3>
             </div>
+            <div class="form__block">
+                <div class="form__contact">
+                    <input class="name" type="text" name="name" placeholder="Имя" required="">
+                    <input class="surname" type="text" name="surname" placeholder="Фамилия" required="">
+                </div>
+                <input class="email" type="email" name="email" placeholder="E-mail" required="">
+                <div class="btn">
+                    <button class="form__btn">Зарегистрироваться <img src="img/Arrow 1.png" alt="Стрелка в право"></button>
+                    
+                </div>
+                <div class="check">
+                    <input class="check__box" type="checkbox" required="">
+                    <p>Я прочитал и принимаю <a href="#">Условия использования</a></p>
+                </div>
+            </div>
+
         </form>
     </section>
 
