--- a/1-blog/index.html
+++ b/1-blog/index.html
@@ -23,5 +23,32 @@
 			<input class="search__btn" type="search" placeholder="Поиск"> 
 		</div>
 	</section>
+	<div class="main__block">
+		<h1 class="main__h1">FRONTEND 12 мая 2024</h1>
+		<h2 class="main__h2">Теория цвета - Как цвет влияет на поведение потребителей</h2>
+	</div>
+	<div class="main__block-contact">
+		<img src="img/Ellipse 1.png" alt="Аватарка">
+		<div class="block__contact-title">
+			<h1>Наталья Васильева</h1>
+			<p>Разработчик</p>
+		</div>
+	</div>
+	<section class="blog__img">
+		<img src="img/Rectangle 181.png" alt="Большая картинка">
+	</section>
+	<section class="box__title">
+		<p>Теория цвета — это особенности эмоционального восприятия человеком тех или иных цветовых решений.
+			 Цвета и различные их комбинации влияют на психику человека, а значит, во многом определяют его поведение. 
+			 Маркетологи и веб-дизайнеры хорошо знают, что правильно подобранная цветовая гамма сайта помогает привлечь и удержать внимание пользователей, сформировать положительное отношение к продукту, подтолкнуть посетителей к совершению целевых действий, повысить конверсию.</p>
+
+			 <p>Универсального ответа на вопрос, как тот или иной цвет влияет на разных людей, нет. Эмоциональная и поведенческая реакция каждого человека зависит от личного опыта. Вместе с тем можно выделить определенные закономерности влияния цветов на поведение пользователей.<br><br>
+
+				В исследовании «Влияние цвета на маркетинг» (Impact of color on marketing) говорится, что использование разных цветов может существенно влиять на настроение и поведение потребителей. Утверждается, что от 60 до 90% покупателей (в зависимости от категории продукта) дают положительную или отрицательную оценку товару, основываясь только на его цвете.</p>
+	</section>
+
+	<footer class="footer">
+		<p>Все права защищены (c) 2024</p>
+	</footer>
 </body>
 </html>
